--- a/Lektion20/Views/Home/About.cshtml
+++ b/Lektion20/Views/Home/About.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model String
+@{
     ViewBag.Title = "About Us";
 }
 
 <h2>About</h2>
 <p>
-     Put content here.
+     ResultString: @Model
 </p>
